# cmake_for_library

./: .gitignore  CMakeLists.txt  config.cmake.in  readme.md  setup.sh
